banner covering fix? and fixing color issue

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    padding-top: 3rem; /*adjust based on banner*/
-    padding: 3rem;
+    padding: 5rem; /*adjust based on banner*/
     box-sizing: border-box;
     color: #333;
     background-color: #f4f4f4; /* Light gray background for the whole page */
@@ -28,7 +27,7 @@ header {
 }
 
 #Codes2 {
-    background: #444; /* White background for 'Code2' section */
+    background: #f4f4f4; /* White background for 'Code2' section */
     padding: 4rem 2rem;
 }
 
